[metadata]
name = h5torch
author = Gaetan De Waele
author_email = gaetandewaele@hotmail.com
description = HDF5 data utilities for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gdewael/h5torch
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    numpy
    h5py
    torch
    scipy

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = gha_python_packaging_demo.app:entry_point
